--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,7 +50,7 @@ body {
 
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    height: 100vh;
 }
 
 p {
